hphp/hack/test/typecheck/memoize/array_of_bad_class2.php.exp
File "array_of_bad_class2.php", line 6, characters 30-32:
This is an object of type Bar (Typing[4149])
File "array_of_bad_class2.php", line 6, characters 35-38:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize
